# RatesConverter-Rust

./: .env~  .gitignore  Cargo.toml  Dockerfile  README.md
migrations/2020-03-13-091948_create_rates_table/: down.sql  up.sql
src/: main.rs  models.rs
src/db/: mod.rs  models.rs  schema.rs
src/filters/: currency_filter.rs  mod.rs
src/handlers/: currency_handler.rs  mod.rs
src/lib/: rate_scraper.rs
src/services/: common_service.rs  currency_service.rs  mod.rs
