[package]
name = "warp-currency"
version = "0.1.0"
authors = ["YJChan <yjtoro@hotmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.3", features = ["sqlite"] }
dotenv = "0.15.0"
warp = "0.2.2"
tokio = {version = "0.2", features = ["macros"]}
pretty_env_logger = "0.4.0"
serde = {version = "1.0.0", features = ["derive"] }
reqwest = "0.10.4"
serde_json = "1.0.48"
chrono = "0.4.11"