[package]
name = "warp-currency"
version = "0.1.1"
authors = ["YJChan <yjtoro@hotmail.com>"]
edition = "2018"

[lib]
name = "rate_scraper"
path = "src/lib/rate_scraper.rs"

[dependencies]
diesel = { version = "1.4.3", features = ["sqlite"] }
dotenv = "0.15.0"
warp = "0.3.0"
tokio = {version = "1.1", features = ["full"]}
pretty_env_logger = "0.4.0"
serde = {version = "1.0.0", features = ["derive"] }
reqwest = "0.11"
serde_json = "1.0.48"
chrono = "0.4.11"
scraper = "0.12.0"
select = "0.5.0"
bytes = "1.0"
tokio-stream = "0.1"
regex = "1.4.3"
itertools = "0.10"
#openssl = { version = "0.10", features = ["vendored"] }